Added photo and links
dog pic not there

--- a/index2.html
+++ b/index2.html
@@ -11,18 +11,16 @@
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-<h1> This is Edwards awesome website.</h1>
-  <p> kansas</p>
+<h1> This is Edwards second awesome website.</h1>
+	<p> kansas</p>
 <p> this is some more info to pad out your content here and I'll create a <a href="https://www.apple.com">Link to the apple website.</a></p>
 
 <ul>
 <li><a href="https://www.apple.com">A link to the apple website</a></li>
 <li> A link to the google website</li>
-<li><a href="index2.html"> A link to a page in my site</a></li>
+<li> A link to a page in my site</li>
+
 </ul>
-
-<img src="dog" />
-
 
 
 </body>
