Demonstrated mailto and width
Fuckin sick

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>	Your page title goes here </title>
+	<title>	Edward Cameron Redler </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
@@ -12,7 +12,7 @@
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <h1> This is Edwards awesome website.</h1>
-  <p> kansas</p>
+  <p> Joke=kansas</p>
 <p> this is some more info to pad out your content here and I'll create a <a href="https://www.apple.com">Link to the apple website.</a></p>
 
 <ul>
@@ -21,7 +21,10 @@
 <li><a href="index2.html"> A link to a page in my site</a></li>
 </ul>
 
-<img src="dog.jpg" />
+<a href="mailto:ecr7d4@mail.missouri.edu">
+<img src="dog.jpg" alt="An image of a dog" title="my pupper" width="500px"/>
+</a>
+
 
 
 
