Finishing this shiznit
Swag worth a milli

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 <ul>
 <li><a href="https://www.apple.com">A link to the apple website</a></li>
-<li> A link to the google website</li>
+<li><a href="https://www.google.com">A link to the google website</a></li>
 <li><a href="index2.html"> A link to a page in my site</a></li>
 </ul>
 
 <a href="mailto:ecr7d4@mail.missouri.edu">
-<img src="dog.jpg" alt="An image of a dog" title="my pupper" width="500px"/>
+<img src="edward.jpg" alt="An image of my heisman pose" title="my heisman pose" width="500px"/>
 </a>
 
-
+<img src="dog.jpg" alt="An image of a dog" title="my pupper" width="500px"/>
 
 
 </body>
